--- a/bube/bube-web/pom.xml
+++ b/bube/bube-web/pom.xml
@@ -29,12 +29,13 @@
     <description>This is the web POM file</description>
 
     <dependencies>
-		<!-- PRIMEFACES --> 
+    	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
-		    <groupId>org.primefaces</groupId>
-		    <artifactId>primefaces</artifactId>
-		    <version>10.0.0</version>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.5</version>
 		</dependency>
+    	
 
         <!-- Import the CDI API, we use provided scope as the API is included in WildFly / JBoss EAP -->
         <dependency>
