--- a/bube/bube-ejb/pom.xml
+++ b/bube/bube-ejb/pom.xml
@@ -94,6 +94,11 @@
             <artifactId>jboss-annotations-api_1.3_spec</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.5</version>
+		</dependency>
     </dependencies>
 
     <build>
